--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": {
         "en": "LG Smart TV"
     },
-    "version": "0.0.3",
+    "version": "0.0.4",
     "compatibility": "0.x || 1.x",
     "author": {
         "name": "Chamid Media",
@@ -66,6 +66,15 @@
 	                            "nl": "IP adres"
 	                        },
 	                        "value": "0.0.0.0"
+	                    },
+	                    {
+	                        "id": "session",
+	                        "type": "text",
+	                        "label": {
+	                            "en": "Session key",
+	                            "nl": "Sessie sleutel"
+	                        },
+	                        "value": "123"
 	                    }
 	                ]
 	            }
@@ -81,6 +90,14 @@
                 "nl": "Stuur commando"
             },
             "args": [
+	             {
+					"name": "command",
+	                "type": "autocomplete",
+	                "placeholder": {
+	                  "en": "Command",
+	                  "nl": "Commando"
+	                }
+	              },
 	              {
 	                "name": "device",
 	                "type": "device",
