--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": {
         "en": "LG Smart TV"
     },
-    "version": "0.0.5",
+    "version": "0.1.0",
     "compatibility": "0.x || 1.x",
     "author": {
         "name": "Chamid Media",
@@ -40,14 +40,7 @@
                 },
                 {
                     "id": "list_devices",
-                    "template": "list_devices",
-                    "navigation": {
-                        "next": "add_smarttv"
-                    }
-                },
-                {
-                    "id": "add_smarttv",
-                    "template": "add_devices"
+                    "template": "list_devices"
                 }
             ],
             "settings": [
